=== 5.79.0 (2024-04-01)

* Support create_or_replace_view with :materialized option on PostgreSQL (nashby) (#2144)

* Support :unlogged_tables_default Database option on Postgres for making created tables unlogged by default (jeremyevans) (#2134)

* Add Dataset#select_prepend for prepending to the current selected columns (jeremyevans) (#2139)

=== 5.78.0 (2024-03-01)

* Support SQLite 3.45+ jsonb functions in the sqlite_json_ops extension (jeremyevans) (#2133)

* Support compounds (e.g. UNION) in conjunction with Database#values on PostgreSQL (jeremyevans) (#2137)

* Support :use_advisory_lock option to Migrator.run to use advisory locks when running migrations (jeremyevans) (#2089)

* Support Database#with_advisory_lock on PostgreSQL, MySQL, and Microsoft SQL Server (jeremyevans) (#2089)

=== 5.77.0 (2024-02-01)

* Support create_table :without_rowid option on SQLite (loranger32) (#2126)

* Warn by default if trying to eager_graph/association_join an association that uses a block, when the block would be ignored (jeremyevans)

* Speed up validates_unique in validation_helpers plugin by using empty? instead of count == 0 (numbata) (#2122)

* Speed up regexp matches in sqlite adapter on Ruby 2.4+ (jeremyevans)

* Add sqlite adapter :regexp_function_cache option for specifying the cache object to use (paddor, jeremyevans) (#2116)

* Respect list plugin :top option when inserting the first row into the model's table (johanmagnusson) (#2115)

* Switch default connection pool to timed_queue on Ruby 3.4+ (jeremyevans)

* Support on_duplicate_columns={raise,warn} parameter in connection URL when using duplicate_columns_handler extension (jeremyevans)

* Add transaction_connection_validator extension for retrying transactions on new connection if there is a disconnect error when starting transaction (jeremyevans)

=== 5.76.0 (2024-01-01)

* Improve performance and flexibility of regexp matching in sqlite adapter (paddor) (#2108)
