@@ -851,6 +851,10 @@
 <span class="ul__span">Adds Dataset#print for printing a dataset as a simple plain-text table.</span>
 </li>
 <li class="ul__li ul__li--grid">
+<a class="a" href="rdoc-plugins/files/lib/sequel/extensions/provenance_rb.html">provenance </a>
+<span class="ul__span">Includes comment in queries showing the locations where the dataset was built.</span>
+</li>
+<li class="ul__li ul__li--grid">
 <a class="a" href="rdoc-plugins/files/lib/sequel/extensions/query_rb.html">query </a>
 <span class="ul__span">Adds Dataset#query for a different interface to creating queries that doesn't use method chaining.</span>
 </li>
