@@ -1,3 +1,7 @@
+=== master
+
+* Add provenance dataset extension, which includes comments in queries showing how and where the dataset was built (jeremyevans)
+
 === 5.79.0 (2024-04-01)
 
 * Support create_or_replace_view with :materialized option on PostgreSQL (nashby) (#2144)
